--- a/src/main/resources/report/ClientReport.jrxml
+++ b/src/main/resources/report/ClientReport.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ClientReport" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="69f14414-984f-4aff-ad76-33fabf667aff">
 	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="87"/>
+	<property name="ireport.y" value="88"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["D:\\Java\\scap_diego\\src\\main\\resources\\report\\"]]></defaultValueExpression>
 	</parameter>
@@ -17,6 +17,10 @@
 	</background>
 	<title>
 		<band height="88" splitType="Stretch">
+			<image>
+				<reportElement x="14" y="4" width="104" height="80" uuid="31287fae-905e-482a-803b-69aec8e94421"/>
+				<imageExpression><![CDATA["D:\\Java\\scap_diego\\src\\main\\resources\\images\\logo.jpg"]]></imageExpression>
+			</image>
 			<staticText>
 				<reportElement x="95" y="4" width="460" height="80" uuid="16a4ce71-e373-4867-8abe-9d7e7103c373"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -24,10 +28,6 @@
 				</textElement>
 				<text><![CDATA[Relatório de Clientes]]></text>
 			</staticText>
-			<image>
-				<reportElement x="7" y="6" width="88" height="78" uuid="dd9146b2-2d72-4f9e-8ff7-bb8202372249"/>
-				<imageExpression><![CDATA["C:\\Program Files\\scap\\images\\logo.jpg"]]></imageExpression>
-			</image>
 		</band>
 	</title>
 	<detail>
@@ -83,7 +83,7 @@
 			<subreport>
 				<reportElement x="216" y="105" width="200" height="38" uuid="27e77b1e-0906-4750-be99-cdb1f730ed83"/>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{telefones})]]></dataSourceExpression>
-				<subreportExpression><![CDATA["C:\\Program Files\\scap\\report\\ClientReport_Subreport.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "ClientReport_Subreport.jasper"]]></subreportExpression>
 			</subreport>
 			<staticText>
 				<reportElement x="0" y="85" width="61" height="20" uuid="440e97ca-8bf9-4841-86d0-4580ede46c97"/>
