--- a/src/main/java/br/com/vitrinidatasoft/view/DialogListaProduto.form
+++ b/src/main/java/br/com/vitrinidatasoft/view/DialogListaProduto.form
@@ -65,6 +65,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="14" style="0"/>
         </Property>
+        <Property name="name" type="java.lang.String" value="" noResource="true"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnProduto">
